fixed off-centered card

--- a/assets/css/input.css
+++ b/assets/css/input.css
@@ -60,7 +60,7 @@ nav a {
     background-image: linear-gradient(to bottom, rgb(31, 28, 28), rgb(80, 78, 78), gray);
     border-radius: 12px;
     position: relative;
-    left: 480px;
+    left: 465px;
     top: 100px;
 }
 
